2002-04-19  Bastien Nocera  <hadess@hadess.net>

	* gnomine.c: (about), (main): remove ENABLE_NLS, add nice icon
	* minefield.c: (gtk_minefield_setup_numbers):
	move the numbers 4 pixels up, which should "fix" the numbers
	appearing between cells

2002-04-16  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am:
	* gnomine.c: (set_flabel):
	* minefield.c: (gtk_minefield_setup_signs),
	(gtk_minefield_realize), (gtk_minefield_size_request),
	(gtk_mine_draw), (gtk_minefield_check_cell), (gtk_minefield_lose),
	(gtk_minefield_win), (gtk_minefield_randomize),
	(gtk_minefield_show), (gtk_minefield_toggle_mark),
	(gtk_minefield_multi_press), (gtk_minefield_multi_release),
	(gtk_minefield_motion_notify), (init_random), (get_random),
	(gtk_minefield_get_type), (gtk_minefield_restart):
	* minefield.h:
	* question.xpm: gameplay enhancements adapted from patch by
	wrstock@buckeye.cb.lucent.com (Bill Stock) (Closes: #78576,
	#77751)

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/gnome-mines.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-17  James Henstridge  <james@daa.com.au>

	* gnomine.c (main): use the "clicked" signal for the "Press to
	resume" button rather than released.  This means you can resume
	the game with spacebar.
	(main): don't bother pushing the RGB visual.  This is all handled
	for us by gtk these days.
	(main): turn off expand for the status bar.  Makes things lay out
	better.
	(focus_out_cb): make the resume button grab focus when we focus
	out.
	(lose_game): make the face button grab focus when you lose.
	(win_game): and when you win.

2002-02-16  James Henstridge  <james@daa.com.au>

	* gnomine.c (about): GnomeAbout isn't a GnomeDialog

	* minefield.c (gtk_minefield_setup_numbers): set up the pango
	layouts for the numbers.
	(gtk_mine_draw): use gdk_draw_layout() to draw the mine text.
	(gtk_minefield_set_size): queue a resize when setting the size of