@@ -1,5 +1,14 @@
 2002-04-19  Bastien Nocera  <hadess@hadess.net>
 
+	* Makefile.am:
+	* gnomine.c: (image_widget_setup), (about), (size_radio_callback),
+	(apply_cb), (preferences_callback), (main):
+	* minefield.c: (gtk_minefield_expose), (gtk_minefield_restart):
+	one step closer to gnome2 porting (removed GnomePropertyBox,
+	gnome_config_*, gnome_pixmap_*)
+
+2002-04-19  Bastien Nocera  <hadess@hadess.net>
+
 	* gnomine.c: (about), (main): remove ENABLE_NLS, add nice icon
 	* minefield.c: (gtk_minefield_setup_numbers):
 	move the numbers 4 pixels up, which should "fix" the numbers
